--- a/personal_webpage.html
+++ b/personal_webpage.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>السيرة الذاتية</title>
     <style>
         /* Setting font-family for 'RB' - using a common alternative until specified font source is confirmed */
@@ -48,16 +47,16 @@
     <div class="container">
         <h1>نبذة عني</h1>
         <p>
-            مرحبًا، اسمي [اسمك]، وأعمل في مجال [مجالك]. أتمتع بخبرة واسعة في [المهارات أو الخبرات المحددة] وأسعى دائمًا لتطوير مهاراتي وتحقيق أهدافي المهنية.
+            مرحبًا، أنا مالك ترابة وأعمل في مجال الإعلام. أسعى دائمًا لتطوير مهاراتي وتحقيق أهدافي المهنية.
         </p>
         
         <h2>روابط التواصل الاجتماعي</h2>
         <div class="social-links">
             <p>
-                <a href="#" target="_blank">فيسبوك</a>
-                <a href="#" target="_blank">تويتر</a>
-                <a href="#" target="_blank">لينكدإن</a>
-                <a href="#" target="_blank">إنستجرام</a>
+                <a href="#" target="_blank">https://www.facebook.com/malekturabaa3</a>
+                <a href="#" target="_blank">https://x.com/Malekturabaa?t=yal3_Fb19EAxkejTv8HWnw&s=09</a>
+                <a href="#" target="_blank">https://t.me/malekturabaa</a>
+                <a href="#" target="_blank">https://www.instagram.com/mturabaa/profilecard/?igsh=ZG96MTV5eTY4cHU3</a>
             </p>
         </div>
     </div>
